--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                     <a href="index.html" class="logo" ></a>         
                     <div class="menu">              
                         <div class="menu_cnt">
-                            <a href="#">OFERTA</a>
-                            <a href="#">REALIZACJE</a>
+                            <a href="#">O FIRMIE</a>
+                            <a href="#">GALERIA</a>
                             <a href="#">KONTAKT</a>
                         </div>                   
                     </div> 
