--- a/index.html
+++ b/index.html
@@ -220,9 +220,7 @@
         <div id="FOOTER">
             <div id="FOOTER_IN">
                 <div class="column">
-                    <div class="nag">                               
-                        O FIRMIE
-                    </div>
+                    <div class="nag">O FIRMIE</div>
                     <ul>        
                         <li><a href="#">Mechanika pojazdowa</a></li>
                         <li><a href="#">Elelktromechanika</a></li>
@@ -231,31 +229,35 @@
                     </ul>   
                 </div>
                 <div class="column">
-                    <div class="nag">                             
-                        NA SKRÓTY
-                    </div>
+                    <div class="nag">KONTAKT</div>
                     <ul>
-                        <li><a href="oferta/index.html">Oferta</a></li>
-                        <li><a href="strony-internetowe/index.html">Strony internetowe</a></li>
-                        <li><a href="realizacje/index.html">Realizacje</a></li>
-                        <li><a href="seo/index.html">Pozycjonowanie / SEO</a></li>
+                        <li><a href="#">Umów wizytę</a></li>
+                        <li><a href="#">Galeria</a></li>
+                        <li><a href="#">Dojazd</a></li>         
                     </ul>
                 </div>
-                <div class="column">
-                    &nbsp;
+                <div class="column">  
+                    <div class="nag">FM Group</div>   
+                    <ul>
+                        <li><a href="#">Branże i katalogi</a></li>
+                        <li><a href="#">Zapisz się</a></li>
+                        <li><a href="#">Współpraca</a></li>         
+                    </ul>
                 </div>
-                <div class="column">
-                    <div class="nag">                                      
-                        KONTAKT
-                    </div>
+                <div class="column">   
                     <div class="ftrtxt">
-                        Smartheads Sp. z o.o.<br/>
-                        ul. Terenowa 40<br/>
-                        52-231 Wrocław<br/>
-
-                        tel: +48 535 03 04 05<br/>
-                        fax: +48 71 707 27 14
-                        <a href="kontakt/index.html" class="">KONTAKT</a>
+                        Care Car Marek Gromadzki<br>
+                        <br>
+                        Adres: ul. Marynarska 15,<br> 
+                        18-400 Łomża<br>
+                        tel. kom. 727 931 300<br>
+                        <br>
+                        <span style="font-size: 13px;"> 
+                        Koordynator FM Group<br>
+                        Wpółpraca, zapisy i zamówienia:<br>
+                        Martyna Kostrzewska<br>
+                        tel kom. 727 913 524 
+                        </span>                            
                     </div>
                 </div>
                 <div class="clr"></div>
