--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
                             <!-- buttony przełącznika -->
                             <div class="slider_push">
                                 <ul id="nav-shadow">
-                                    <li><a href="#" title="" class="s1"><span class="ico_sh"></span></a></li>
-                                    <li><a href="#" title="" class="s2"><span class="ico_zarowka"></span></a></li>
-                                    <li><a href="#" title="" class="s3"><span class="ico_aparat"></span></a></li>
-                                    <li><a href="#" title="" class="s4"><span class="ico_seo"></span></a></li>      
-                                    <li><a href="#" title="" class="s5"><span class="ico_seo"></span></a></li>      
+                                    <li><a href="#" title="" class="s1"></a></li>
+                                    <li><a href="#" title="" class="s2"></a></li>
+                                    <li><a href="#" title="" class="s3"></a></li>
+                                    <li><a href="#" title="" class="s4"></a></li>      
+                                    <li><a href="#" title="" class="s5"></a></li>      
                                 </ul>
                                 <div class="clr"></div>
                             </div>
