--- a/kontakt.html
+++ b/kontakt.html
@@ -52,8 +52,9 @@
                     <div class="col-md-5">
                         <div class="box maps">
                             <img src="img/maps.png" class="img-responsive" alt="" />
+                            <a href="#" class="btn btn-default">ZAPLANUJ DOJAZD</a>
                         </div>
-                        <div class="box contact m-t-20">
+                        <div class="box contact text-center m-t-20">
                             <p class="phone">+48 727 931 300</p>
                             <p class="mail">carecar@poczta.fm</p>
                         </div>
@@ -179,12 +180,6 @@
     </div>
                          
     <a href="#" id="umow-sie"></a>
-
-    <script type="text/javascript">
-    $(document).ready(function() {
-        $(document).shloader({container: '#GLOBAL'});
-    });
-    </script>
 
 </body>                                                                                                       
 </html>
